--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,13 @@
-.dockerignore
 .git
 .gitignore
+.dockerignore
 Dockerfile
 docker-compose.yml
+vendor
+
+.DS_Store
+/vendor/*
+/tmp/*
+!/tmp/empty
+/logs/*
+!/logs/empty
