--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   app:
-    build: .
+    build: 
+        context: .
     image: base-php:latest
     ports:
       - "8000:80"
